# rusticjellyfish

./: todo.md
admin/: Cargo.toml
admin/src/: main.rs
client/: Cargo.toml  build.sh
client/.cargo/: config.toml
client/src/: main.rs
config/: example_mappings.txt
config/src/: main.rs
rusticjellyfish-client/: Cargo.toml
rusticjellyfish-client/src/: main.rs
rusticjellyfish-server/: Cargo.toml
rusticjellyfish-server/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
