[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core web framework dependencies
axum = "0.7"
axum-server = { version = "0.6", features = ["tls-rustls"] }
tokio = { version = "1.0", features = ["full"] }

# JSON handling
serde_json = "1.0"

# Redis client
redis = { version = "0.25", features = ["tokio-comp"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true